# MLB

./: .env.example  .gitattributes  .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
.github/workflows/: daily.yml
config/: config.yaml
src/mlb_quant/: __init__.py  config.py  db.py  settings.py
src/mlb_quant/analysts/: __init__.py  base.py  brain.py  game.py  players.py  weather.py
src/mlb_quant/api/: __init__.py
src/mlb_quant/bankroll/: __init__.py  kelly.py
src/mlb_quant/betting/: __init__.py  ledger.py  manual_odds.py  value.py
src/mlb_quant/cli/: bets.py  daily.py  features.py  ingest.py  main.py  models.py  parlay.py  props.py  report.py  simulate.py
src/mlb_quant/ensemble/: __init__.py
src/mlb_quant/evaluation/: __init__.py  backtest.py  metrics.py
src/mlb_quant/feature_engineering/: __init__.py  base.py  builder.py  rolling.py  upcoming.py
src/mlb_quant/feature_engineering/blocks/: __init__.py  bullpen.py  elo.py  lineup_quality.py  park.py  pitcher_form.py  platoon.py  rest_travel.py  sp_quality.py  sp_statcast.py  team_form.py  weather.py
src/mlb_quant/ingestion/: __init__.py  base.py  lahman.py  mlb_stats_api.py  odds_api.py  savant.py  statcast.py  weather.py
src/mlb_quant/models/: __init__.py  base.py  calibration.py  ensemble.py  logistic.py  markets.py  poisson.py  props.py
src/mlb_quant/preprocessing/: __init__.py  batter_games.py
src/mlb_quant/reporting/: __init__.py  daily.py  exports.py
src/mlb_quant/simulations/: __init__.py  monte_carlo.py
src/mlb_quant/utils/: __init__.py  frames.py  logging.py
src/mlb_quant/visualization/: __init__.py  calibration.py  dashboard.py
tests/: conftest.py  test_analysts.py  test_backtest.py  test_builder.py  test_calibration.py  test_calibration_viz.py  test_cli.py  test_dashboard.py  test_db.py  test_elo.py  test_ensemble.py  test_exports.py  test_feature_blocks.py  test_frames.py  test_kelly.py  test_lahman.py  test_ledger.py  test_manual_odds.py  test_markets.py  test_mlb_stats_api.py  test_models.py  test_monte_carlo.py  test_odds_api.py  test_platoon.py  test_props.py  test_quality_blocks.py  test_rest_travel.py  test_rolling.py  test_savant.py  test_settings.py  test_sp_statcast.py  test_statcast.py  test_upcoming.py  test_value.py  test_weather.py
tests/fixtures/: boxscore_sample.json  odds_sample.json  schedule_sample.json  venues_sample.json  weather_sample.json
