[project]
name = "mlb-quant"
version = "0.1.0"
description = "Sistema profesional de análisis cuantitativo y pronóstico para MLB."
authors = [{ name = "Artur", email = "arturooponcee@gmail.com" }]
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.13,<3.14"
dependencies = [
    "numpy (>=2.1)",
    "pandas (>=2.2)",
    "polars (>=1.17)",
    "duckdb (>=1.1)",
    "requests (>=2.32)",
    "typer (>=0.15)",
    "rich (>=13.9)",
    "hydra-core (>=1.3)",
    "omegaconf (>=2.3)",
    "pydantic (>=2.10)",
    "pydantic-settings (>=2.7)",
    "python-dotenv (>=1.0)",
]

[project.scripts]
mlb = "mlb_quant.cli.main:app"

[tool.poetry]
packages = [{ include = "mlb_quant", from = "src" }]

[tool.poetry.group.dev.dependencies]
pytest = ">=8.3"
pytest-cov = ">=6.0"
ruff = ">=0.8"
mypy = ">=1.13"
pre-commit = ">=4.0"
types-requests = ">=2.32"
pandas-stubs = ">=2.2"

# Grupos opcionales: se instalan cuando la fase los necesite.
# poetry install --with ml,data
[tool.poetry.group.ml]
optional = true

[tool.poetry.group.ml.dependencies]
scikit-learn = ">=1.6"
xgboost = ">=2.1"
lightgbm = ">=4.5"
catboost = ">=1.2"
mlflow = ">=2.19"
optuna = ">=4.1"

[tool.poetry.group.data]
optional = true

[tool.poetry.group.data.dependencies]
pybaseball = ">=2.2"
beautifulsoup4 = ">=4.12"
lxml = ">=5.3"

[tool.poetry.group.viz]
optional = true

[tool.poetry.group.viz.dependencies]
matplotlib = ">=3.9"
plotly = ">=5.24"

[build-system]
requires = ["poetry-core>=2.0"]
build-backend = "poetry.core.masonry.api"

# ---------------------------------------------------------------------------
# Tooling
# ---------------------------------------------------------------------------

[tool.ruff]
target-version = "py313"
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "N",   # pep8-naming
    "UP",  # pyupgrade
    "B",   # bugbear
    "SIM", # simplify
    "RUF", # ruff-specific
    "D",   # pydocstyle
]
ignore = [
    "D104", # docstring en __init__.py de paquete: opcional
]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["D"]

[tool.mypy]
python_version = "3.13"
strict = true
mypy_path = "src"
packages = ["mlb_quant"]
pretty = true

[[tool.mypy.overrides]]
module = ["pybaseball.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q --strict-markers -m 'not integration'"
markers = [
    "integration: tests que tocan red o servicios externos (correr con: pytest -m integration)",
]
